Feat: Nuevo flujo de evaluación de recetas